refactor: 코드 스타일 일부 수정