@@ -1,7 +1,6 @@
 package com.hyero.hyeromap.recommendation.dto;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import com.hyero.hyeromap.store.domain.Store;
 import com.hyero.hyeromap.store.dto.StoreDetailResponse;
@@ -16,7 +15,7 @@ public record RecommendationResponse(
                 gptResponse,
                 stores.stream()
                         .map(StoreDetailResponse::from)
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 
